# pegasi-shield

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  dolly_2.0_colab.py  dolly_v2_huggingface_v1.1.ipynb  fine_tuning_dolly_v2_lora_alpaca.ipynb  pegasi-readme.md  pyproject.toml  setup.cfg  setup.py
examples/: Llama_7b_guanaco_4bit_qlora_with_dolly_15k.ipynb  dolly_2_0_huggingface_v1_1.py  dolly_v2_huggingface_v1.1.ipynb  fine_tuning_dolly_2_0_with_lora_and_alpaca.py  fine_tuning_dolly_v2_lora_alpaca.ipynb  llama_7b_guanaco_4bit_qlora_with_dolly_15k.py
guardrail/: __init__.py  client.py  db.py
guardrail/dataset/: convert_json.py  dataset_creation_local_api.py  dataset_generator.py  embeddings.py  parse_pdf.py  responses.csv  responses.json
guardrail/guardchain/: __init__.py  errors.py
guardrail/guardchain/agent/: agent_structs.py  base_agent.py  chat_agent.py  message.py  prompts.py
guardrail/guardchain/chain/: base_chain.py  chain.py  constants.py
guardrail/guardchain/memory/: base.py  buffer_memory.py
guardrail/guardchain/models/: base_model.py  ggml_model.py  jsonformer.py  llama_model.py
guardrail/guardchain/tools/: base_tool.py  simple_handoff.py
guardrail/metrics/: bias.py  custom.py  injections.py  relevance.py  sentiment.py  textstat.py  toxicity.py  truthfulness.py
guardrail/streamlit/: 1_🏠_Evaluate.py  styles.css
guardrail/streamlit/.streamlit/: config.toml
guardrail/streamlit/helper/: add_logo.py  agstyler.py
guardrail/streamlit/pages/: 2_🤖_Benchmark.py  (+1 more)
tests/: test_embeddings.py  test_guardchain.py  test_textstat.py
