[command]
option = value

[metadata]
name = guardrail-ml
version = 0.0.545
author = Kevin Wu
author_email = kevin@guardrailml.com
description = Monitor LLMs with custom metrics to scale with confidence
long_description = file: README.md
long_description_content_type = text/markdown
url = http://www.guardrailml.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
